--- a/style.css
+++ b/style.css
@@ -1,3 +1,192 @@
 body {
     font-family: roboto;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
+    margin: 0;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+    margin: 0;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 800;
+    color: #1f2937;
+    margin: 0 0 60px;
+}
+
+h4 {
+    font-size: 24px;
+    margin: 0;
+}
+
+p {
+    font-size: 18px;
+    font-weight: 350;
+    margin: 0;
+}
+
+.header, .footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    padding: 8px 42px;
+    background-color: #3882F6;
+    border-radius: 8px;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.content-box {
+    display: flex;
+    /* temporary margin so I can see better */
+    padding: 100px 0;
+    justify-content: center;
+}
+
+.large-box {
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.small-box {
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* header styles */
+
+.header-logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+nav {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    gap: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+/* content box 1 */
+
+.cb-1 {
+    /* align-items: center; */
+    background-color: #1F2937;
+    color: white;
+}
+
+.cb-1-content {
+    width: 480px;
+}
+
+.cb-1-content .p2 {
+    color: #E5E7EB;
+    margin: 0;
+}
+
+.button-1 {
+    display: block;
+    border-color: #3882F6;
+    border-style: solid;
+    margin: 16px 0;
+}
+
+.cb-1-img {
+    background-color: #71747a;
+    width: 480px;
+    height: 200px;
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* content box 2 */
+
+.cb-2 .small-box {
+    flex-direction: column;
+    align-items: center;
+}
+
+.cb-2 {
+    padding-top: 50px;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-self: stretch;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 158px;
+}
+
+.card-img {
+    width: 150px;
+    height: 150px;
+    border-style: solid;
+    border-color: #3882f6;
+    border-width: 4px;
+    border-radius: 16px;
+}
+
+.card-text {
+    padding: 8px 0;
+    text-align: center;
+    color: #71747a;
+}
+
+/* content box 3 */
+
+.cb-3 {
+    background-color: #E5E7EB;
+}
+
+.cb-3 .small-box{
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.p1 {
+    font-size: 36px;
+    font-weight: light;
+}
+
+.quote-text {
+    display: flex;
+    justify-content: center;
+    color: #1f2937;
+}
+
+.quote-citation {
+    text-align: right;
 }
