--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav a {
 }
 
 .cb-1-content {
-    width: 480px;
+    width: 520px;
 }
 
 .cb-1-content .p2 {
@@ -124,10 +124,7 @@ nav a {
 
 .cb-1-img {
     background-color: #71747a;
-    width: 480px;
-
-    /* height: 200px; */
-    /* flex: 0 0 auto; */
+    width: 520px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -172,6 +169,7 @@ img {
     border-color: #3882f6;
     border-width: 4px;
     border-radius: 16px;
+    overflow: hidden;
 }
 
 .card-text {
